Add Ability to Play Another Round
This adds the 'Play Again' button to the DOM. When the
player clicks on the button, the page just does a reload
and starts the game over.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <header>
             <h1>Tic-Tac-Tow</h1>
             <p id="message"></p>
+            <button id="playAgain" class="hidden play-again-btn">Play Again</button>
         </header>
 
         <div class="container">
